<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_weight="1"
    android:layout_height="match_parent"
    android:background="#FFC107"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/ResOP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:padding="15dp"
        android:text="@string/ResOP"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/chooseadultchild"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:gravity="left"
        android:text="@string/AC"
        android:textAppearance="?android:textAppearanceMedium"
        android:textSize="20sp" />

    <RadioGroup
        android:id="@+id/AdultorChild"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/Adult"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Adult"
            android:textStyle="bold"/>

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/Child"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Child"
            android:textStyle="bold"/>
    </RadioGroup>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:gravity="left"
        android:text="@string/choose_kind"
        android:textAppearance="?android:textAppearanceMedium"
        android:textSize="20sp" />

    <RadioGroup
        android:id="@+id/Part"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/Rav_Hen"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Rav_Hen"
            android:textStyle="bold"/>

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/Yes_Planet"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Yes_Planet"
            android:textStyle="bold"/>
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/Cinema_City"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Cinema_City"
            android:textStyle="bold"/>
    </RadioGroup>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/dateButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:text="@string/Date" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <Button
        android:id="@+id/GetTickets"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/Get_tickets" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1">

        <Button
            android:id="@+id/areyousure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="12dp"
            android:gravity="center"
            android:text="@string/confirmperchase" />
    </LinearLayout>
</LinearLayout>