<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_weight="1"
    android:layout_height="match_parent"
    android:background="@color/teal_200"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:padding="5dp"
        android:text="@string/GlobosMovies"
        android:textSize="30sp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_margin="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="490dp"
            android:layout_weight="1"
            android:background="@drawable/spongback"
            android:gravity="top"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:gravity="center"
                android:layout_gravity="center"
                android:padding="10dp"
                android:text="@string/moviename"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <ImageView
                android:layout_width="180dp"
                android:layout_height="270dp"
                android:contentDescription="sponge"
                android:layout_gravity="center"
                android:src="@drawable/img_1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/movie_words"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/orderButton"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/orderButton"/>
</LinearLayout>